--- a/front/src/index.html
+++ b/front/src/index.html
@@ -6,7 +6,7 @@
     <title>Alten Shop</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/icons/Alten-Logo-Vector.webp">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" id="app-theme" href="mdc-light-deeppurple.css">
     <meta name="theme-color" content="#1976d2">
